added top-banner and about me section

--- a/index.html
+++ b/index.html
@@ -5,7 +5,47 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>food network</title>
+    <!-- google fonts link -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
-  <body></body>
+  <body>
+    <!-- top banner section -->
+    <section class="top-banner flexible-container">
+      <div class="half-width">
+        <h1>Discover <span class="orange-color">restaurants</span></h1>
+        <h1>that deliver Food Network</h1>
+        <p>
+          I am. I love to find new recipes for my family to enjoy and that is
+          easier than ever to do with the wealth of food website. I want to
+          share some of my favorite food with you
+        </p>
+        <a class="link-btn" href="">Contact Me</a>
+      </div>
+      <div class="half-width">
+        <img src="images/male/foodShow.png" alt="" />
+      </div>
+    </section>
+
+    <!-- about me section -->
+    <section class="about-me flexible-container">
+      <div class="half-width">
+        <img src="images/male/myPic.png" alt="" />
+      </div>
+      <div class="half-width">
+        <h2>About Me</h2>
+        <p>
+          I am front-end web-developer. I have already learned HTML, CSS. Not
+          only that i have created my port-folio project that is use same
+          language. and i continue learning to grow my experience
+        </p>
+        <a class="link-btn" href="">DOWNLOAD CV</a>
+      </div>
+    </section>
+  </body>
 </html>
