--- a/index.html
+++ b/index.html
@@ -47,5 +47,53 @@
         <a class="link-btn" href="">DOWNLOAD CV</a>
       </div>
     </section>
+
+    <!-- recipe section -->
+    <section class="recipies">
+      <div class="recipe-text">
+        <h3>My Recipies</h3>
+        <p>
+          Are you an excellent chef with your own secret recipes? And is it time
+          to put them on paper so you can share them with loved ones or even
+          make some money out of it? Recipe cards or cookbooks with minimal
+          effort.
+        </p>
+      </div>
+
+      <div class="card-container">
+        <div class="card-content">
+          <img src="images/food/food.jpg" alt="" />
+          <h3 class="orange-color">More Baking How-Tos</h3>
+          <p>
+            A Spanish tortilla is just as tasty when in your air fryer. This
+            recipe saves on cleanup and reduces
+          </p>
+        </div>
+
+        <div class="card-content">
+          <img src="images/food/food(1).png" alt="" />
+          <h3 class="orange-color">Air Fryer Spanish Tortilla</h3>
+          <p>
+            A Spanish tortilla is just as tasty when in your air fryer. This
+            recipe saves on cleanup and reduces
+          </p>
+        </div>
+
+        <div class="card-content">
+          <img src="images/food/food(2).jpg" alt="" />
+          <h3 class="orange-color">Chicken Salad Summer Rolls</h3>
+          <p>
+            A Spanish tortilla is just as tasty when in your air fryer. This
+            recipe saves on cleanup and reduces
+          </p>
+        </div>
+      </div>
+    </section>
+
+    <!-- footer section -->
+    <footer>
+      <h2><span class="orange-color">FOOD</span> NETWORK</h2>
+      <p>Copy Right &copy; Developer by Amdadul Islam</p>
+    </footer>
   </body>
 </html>
