--- a/index.html
+++ b/index.html
@@ -90,6 +90,25 @@
       </div>
     </section>
 
+    <!-- bonus part social media section -->
+    <section class="social-media">
+      <div>
+        <img src="images/shapes/youtube.png" alt="" />
+        <h2>700k</h2>
+        <p><small>Youtube Subscribers</small></p>
+      </div>
+      <div>
+        <img src="images/shapes/instagram.png" alt="" />
+        <h2>2.4m</h2>
+        <p><small>Instagram followers</small></p>
+      </div>
+      <div>
+        <img src="images/shapes/like.png" alt="" />
+        <h2>100k</h2>
+        <p><small>Dribble Short Likes</small></p>
+      </div>
+    </section>
+
     <!-- footer section -->
     <footer>
       <h2><span class="orange-color">FOOD</span> NETWORK</h2>
