added my linkedin profile link

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
           easier than ever to do with the wealth of food website. I want to
           share some of my favorite food with you
         </p>
-        <a class="link-btn" href="">Contact Me</a>
+        <a
+          class="link-btn"
+          href="https://www.linkedin.com/in/md-amdadulm-b4341b178/"
+          >Contact Me</a
+        >
       </div>
       <div class="half-width">
         <img src="images/male/foodShow.png" alt="" />
@@ -44,7 +48,12 @@
           only that i have created my port-folio project that is use same
           language. and i continue learning to grow my experience
         </p>
-        <a class="link-btn" href="">DOWNLOAD CV</a>
+        <a
+          class="link-btn"
+          href="https://drive.google.com/drive/folders/1247URJkStS__Zl0iDdxhSgrtt9qtaR-h"
+          download
+          >DOWNLOAD CV</a
+        >
       </div>
     </section>
 
